<resources>
    <string name="app_name">BUBER</string>
    <string name="button_text">Call Driver ...</string>
    <string name="sched_button_text">Schedule Appt ...</string>
    <string name="default_text_view">Cynthia\'s Big Vag!</string>
    <string name="next_image_text_view">Jess\'s Big Ole Titties!</string>
    <string name="tag_line">Big Red Beaver</string>
    <string name="tag_line_default_to_name">Savannah Summertime</string>
    <string name="rating_status_age">rating: 4.5 ONLINE age: 23</string>
    <string name="just_rating">4.5</string>
    <string name="just_age">20</string>
    <string name="just_status">ONLINE</string>
    <string name="just_distance">4.5 mi</string>
    <string name="age_static">\u0020yrs</string>
    <string name="age_default">20</string>
    <string name="num_ratings_p_open">\u0020(</string>
    <string name="num_ratings_p_close">)</string>
    <string name="num_ratings_value">0</string>
    <string name="distance_static">\u0020mi.</string>
    <string name="distance_default">99</string>
    <string name="name_0">Big Orange Bill</string>
    <string name="name_1">Randy Longsnapper</string>
    <string name="name_2">Bickle Behave</string>
    <string name="name_3">Jandy Jan Glass</string>
    <string name="name_4">Tara Clam Slip Hawkins</string>
    <string name="comment_0">This dude is really orange!</string>
    <string name="comment_1">Betty has a nice big juicy ass!</string>
    <string name="comment_2">Bickle is very tasty!</string>
    <string name="comment_3">Holy wowsa!</string>
    <string name="comment_4">She showed me her feet and I was like Boner Time!</string>
    <string name="detailed_m_0">I am an attractive, orange dude!</string>
    <string name="detailed_m_1">They call me Betty and they call my ass Big and Juicy, lol!</string>
    <string name="detailed_m_2">My name is Bickle and I am very tasty!</string>
    <string name="detailed_m_3">What can I say - Beaver City!</string>
    <string name="detailed_m_4">Lick my feet and stop looking at my beaver!</string>
    <string name="long_comment_test">
        You have to try it to understand how different and better this roller is compared to traditional foam rollers. The material is high grade which leaves no concern for breaking down. The different settings for the intensity is well balanced and the range is manageable between levels. Charging is relatively quick and holds pretty decent charge. My only concern, unfounded mind you, is how long will the vibration mechanism hold up.
    </string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="payment_method">Payment</string>
    <string name="your_trips">Your Trips</string>
    <string name="free_rides">Free Rides</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="drive_with_buber">Drive with Buber</string>
    <string name="legal">Legal</string>
    <string name="payment_method_is_great">Payment Method is Great!</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="no_image_available">No image available</string>
    <string name="verified_splainin">What is Verified?</string>
    <string name="pics_real">Are Pics Real?</string>
    <string name="tip_negotiator_help">What is the Tip Negotiator?</string>
    <string name="pics_real_bullet1">1. Buber rejects pics that are downloaded from other sites.\n2. The \"Photos Accurate\" user rating is a good indicator.</string>
    <string name="pics_real_bullet1b">3. A reverse image search can be started from the detailed photo view page:</string>
    <string name="pics_real_bullet2">\ta.Click the Search Icon in the toolbar. This will take you to the Google Image Search page.</string>
    <string name="pics_real_bullet3">\tb.Long press or double-click the search box, then click Paste.\n\tc.Click the Search Icon.\n\td.Click on the \"search by image\" link after the search returns did not match results (see pic).</string>
    <string name="pics_real_bullet4">\te.Multiple results from the search increase the likelihood that the pic is fake.</string>
    <string name="search_button_text">Temporary Search Button</string>
</resources>
