<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragment_photo_page_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/default_text_view"/>

    <FrameLayout
        android:id="@+id/fragment_photo_frame_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/fragment_photo_page_left_arrow_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="left|center_vertical"
            android:src="@drawable/arrow_left_resize100_tranny_r1"/>

        <ImageView
            android:id="@+id/fragment_photo_page_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="center"
            android:src="@drawable/betty_up_close"/>

        <ImageView
            android:id="@+id/fragment_photo_page_right_arrow_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/arrow_right_resize100_tranny_r10_m1"/>

    </FrameLayout>

    <TextView
        android:id="@+id/fragment_photo_page_text_detailed_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:typeface="normal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/default_text_view"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="?android:attr/dividerHorizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" >

        <Button
            android:id="@+id/btn_change_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_time_to_leave_pink_24dp"
            android:text="@string/button_text"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn_schedule_appt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/agenda_kegiatan3_pink"
            android:text="@string/sched_button_text"
            android:textSize="10sp" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="?android:attr/dividerHorizontal" />

    <TextView
        android:id="@+id/fragment_photo_page_text_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:typeface="monospace"
        android:text="@string/default_text_view"/>


</LinearLayout>